...
        fileprivate init() {}
    }

    /// This `R.id` struct is generated, and contains static references to accessibility identifiers.
    struct id {
        struct gitRepositoriesTableViewCell {
            /// Accessibility identifier `RepositoryTableViewCell.ReliabilityIcon`.
            static let repositoryTableViewCellReliabilityIcon: String = "RepositoryTableViewCell.ReliabilityIcon"

            fileprivate init() {}
        }

        fileprivate init() {}
...
